# Hyde

./: .gitignore  README.md  config_example.json  hyde.py  pyproject.toml  utility.py
ModernWarfare/: database.py  modernwarfare.py  placeholders.json
ModernWarfare/XAssets/: __init__.py  accessories.py  battlePasses.py  bundles.py  callingCards.py  camos.py  challenges.py  charms.py  consumables.py  dlc.py  emblems.py  equipment.py  events.py  executions.py  features.py  gestures.py  itemSources.py  kiosks.py  missions.py  operators.py  quips.py  reticles.py  skins.py  specialItems.py  sprays.py  stickers.py  unlockItems.py  vehicleCamos.py  vehicleHorns.py  vehicleTracks.py  weapons.py
