[tool.poetry]
name = "hyde"
version = "2.0.0"
description = "Call of Duty XAsset compiler that transforms raw assets into digestible data."
authors = ["Ethan C <EthanC@GitHub.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.1.2"
coloredlogs = "^15.0"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
