[tool.poetry]
name = "hyde"
version = "2.0.0"
description = "Call of Duty XAsset compiler that transforms raw assets into digestible data."
authors = ["Ethan C <EthanC@GitHub.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^8.4.0"
coloredlogs = "^15.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.12.1"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
